re PR rtl-optimization/10679 ([3.3/3.4] --param min-inline-insns not honoured)

PR optimization/10679
	* tree-inline.c (inlinable_function_p): Honor MIN_INLINE_INSNS.

	PR optimization/10679
	* g++.dg/opt/inline4.C: New test.

From-SVN: r69698